front/src/components/Home/RecentMentors/styles.scss
@use 'src/styles/vars' as v;

.latestMentor {
  // border: 1px vars.$primaryColor solid;

  &-span {
    color: v.$color-theme1;
  }

  &-title {
    font-family: v.$titleFont;
    color: v.$color-theme2;
    text-align: center;
    font-size: 2.5rem;
    font-weight: 800;
    padding: v.$bigGutter 0;
  }

  &-container {
    padding: v.$gutter;
    padding-bottom: 4rem;
  }

  &-list {
    display: flex;
    justify-content: space-around;
    margin-bottom: 3.5rem;
  }

  &-list-card-imgContainer {
    margin-bottom: v.$halfGutter;
  }

  &-list-card-content {
    text-align: center;
  }

  &-list-card-content-title {
    font-weight: bold;
    font-size: 1.3rem;
    margin-bottom: 0.8rem;
  }

  &-list-card-content-role {
    font-size: 1.1rem;
  }

  &-btnContainer {
    display: flex;
    justify-content: center;
  }
}

/*Tablets [601px -> 1100px]*/
@media only screen and (max-width: 1100px) {
  .latestMentor {
    &-list {
      display: flex;
      flex-wrap: wrap;
      align-items: center;
      margin-bottom: 3.5rem;
    }
    &-list-card {
      align-items: center;
      margin-bottom: 1.8rem;
    }
  }
}

